--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,39 @@
+aio-timers==0.0.1
+aiohttp==3.7.4
+async-timeout==3.0.1
+attrs==20.3.0
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==3.0.4
 discord.py==1.6.0
+google-auth==1.27.0
+google-auth-oauthlib==0.4.2
 gspread==3.6.0
+httplib2==0.19.0
+idna==2.10
+importlib-metadata==3.7.0
+iniconfig==1.1.1
+multidict==5.1.0
+numpy==1.20.1
 oauth2client==4.1.3
-python-dotenv==0.15.0
+oauthlib==3.1.0
+packaging==20.9
+pandas==1.2.3
+pluggy==0.13.1
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
 pytest==6.2.1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.15.0
+toml==0.10.2
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+yarl==1.6.3
+zipp==3.4.0
