--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cachetools==4.2.1
 certifi==2020.12.5
 chardet==3.0.4
 discord.py==1.6.0
+emoji==1.2.0
 google-auth==1.27.0
 google-auth-oauthlib==0.4.2
 gspread==3.6.0
@@ -19,6 +20,7 @@ oauth2client==4.1.3
 oauthlib==3.1.0
 packaging==20.9
 pandas==1.1.5
+Pillow==8.1.1
 pluggy==0.13.1
 py==1.10.0
 pyasn1==0.4.8
@@ -31,6 +33,7 @@ pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+selenium==3.141.0
 six==1.15.0
 toml==0.10.2
 typing-extensions==3.7.4.3
